# discord-shared-messages

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
discord_shared_messages/: __init__.py  discord_bot.py  server.py
discord_shared_messages/sanic_oauth/: blueprint.py  core.py  providers.py
tests/: test_discord_shared_messages.py
